--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<center><strong><p><FONT FACE="Times Roman" SIZE=9 COLOR=black>Diseño de paginas web</p></strong></center>
+<center><strong><p><FONT FACE="Times Roman" SIZE=9 COLOR=black>DiseÃ±o de paginas web</p></strong></center>
 
 <body style="background-color:#C7FFD2">
  
